@@ -13,10 +13,8 @@
 <h1 class="title">Mathematics</h1>
 
 <p>Docutils supports inline math with the prefix or postfix <tt class="docutils literal">:math:</tt>
-role specificator, <span class="math">
-\(n! + \sin(x_n^2)\)</span>
- and <span class="math">
-\(A_\text{c} =
+role specificator, <span class="math">\(n! + \sin(x_n^2)\)</span>
+ and <span class="math">\(A_\text{c} =
 \frac{\pi}{4} d^2\)</span>
 , as well as displayed math via the
 <cite>math</cite> directive:</p>
@@ -39,8 +37,7 @@ See <a class="reference internal" href="#eq-m">eq:M</a> and <a class="reference 
 \mathbf{M} = \left(\begin{matrix}a&amp;b\\c&amp;d\end{matrix}\right)
 \end{equation*}
 </div>
-<p>is <span class="math">
-\(|\mathbf{M}| = ad - bc\)</span>
+<p>is <span class="math">\(|\mathbf{M}| = ad - bc\)</span>
 .</p>
 <p>More than one display math block can be put in one math directive.
 For example, the following sum and integral with limits:</p>
@@ -62,8 +59,7 @@ directives:</p>
 i\hbar \frac{\partial }{\partial t}\Psi  = \hat{H}\Psi ,
 \end{equation*}
 </div>
-<p>with the <em>wave function</em> <span class="math">
-\(\Psi \)</span>
+<p>with the <em>wave function</em> <span class="math">\(\Psi \)</span>
 , describes how the quantum state of a
 physical system changes in time.</p>
 <dl class="docutils">
@@ -75,44 +71,32 @@ physical system changes in time.</p>
 <col width="33%" />
 </colgroup>
 <tbody valign="top">
-<tr><td><span class="math">
-\(\acute{a}\)</span>
+<tr><td><span class="math">\(\acute{a}\)</span>
       <tt class="docutils literal">\acute{a}</tt></td>
-<td><span class="math">
-\(\dot{t}\)</span>
+<td><span class="math">\(\dot{t}\)</span>
         <tt class="docutils literal">\dot{t}</tt></td>
-<td><span class="math">
-\(\hat{\gamma}\)</span>
+<td><span class="math">\(\hat{\gamma}\)</span>
    <tt class="docutils literal"><span class="pre">\hat{\gamma}</span></tt></td>
 </tr>
-<tr><td><span class="math">
-\(\grave{a}\)</span>
+<tr><td><span class="math">\(\grave{a}\)</span>
       <tt class="docutils literal">\grave{a}</tt></td>
-<td><span class="math">
-\(\ddot{t}\)</span>
+<td><span class="math">\(\ddot{t}\)</span>
        <tt class="docutils literal">\ddot{t}</tt></td>
-<td><span class="math">
-\(\tilde{\alpha}\)</span>
+<td><span class="math">\(\tilde{\alpha}\)</span>
  <tt class="docutils literal"><span class="pre">\tilde{\alpha}</span></tt></td>
 </tr>
-<tr><td><span class="math">
-\(\breve{x}\)</span>
+<tr><td><span class="math">\(\breve{x}\)</span>
       <tt class="docutils literal">\breve{x}</tt></td>
-<td><span class="math">
-\(\dddot{t}\)</span>
+<td><span class="math">\(\dddot{t}\)</span>
       <tt class="docutils literal">\dddot{t}</tt></td>
-<td><span class="math">
-\(\vec{\imath}\)</span>
+<td><span class="math">\(\vec{\imath}\)</span>
    <tt class="docutils literal"><span class="pre">\vec{\imath}</span></tt></td>
 </tr>
-<tr><td><span class="math">
-\(\check{a}\)</span>
+<tr><td><span class="math">\(\check{a}\)</span>
       <tt class="docutils literal">\check{a}</tt></td>
-<td><span class="math">
-\(\bar{a}\)</span>
+<td><span class="math">\(\bar{a}\)</span>
         <tt class="docutils literal">\bar{a}</tt></td>
-<td><span class="math">
-\(\vec{R}\)</span>
+<td><span class="math">\(\vec{R}\)</span>
         <tt class="docutils literal">\vec{R}</tt></td>
 </tr>
 </tbody>
